--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/CalculatorService
+.vs/ProjectEvaluation/calculatorservice.metadata.v5.1
+.vs/ProjectEvaluation/calculatorservice.projects.v5.1
